# AM---ProjetoRecomendacao

./: main.py  pyproject.toml
models/: transformers.joblib
notebooks/: 01_intro_dados.ipynb  02_testes_perceptron.ipynb  03_perceptron_numpy.ipynb  04_pandas_etl.ipynb
scripts/: clean_dataset.py  train_feature_engineer.py  train_mlp.py
src/: schemas.py
src/api/v1/: data_audit.py  feature_engineering.py  library.py  recommendation.py  router.py
src/models/: perceptron.py  perceptron_numpy.py
src/services/: data_cleaner.py  feature_engineer.py  mlp_classifier.py
