[project]
name = "am-projeto-recomendacao"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.133.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "notebook>=7.5.4",
]
